[project]
name = "comfyui-lnl"
description = "Frame Selector & Sequence Selection Node for ComfyUI."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/latenightlabs/ComfyUI-LNL"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "latenightlabs"
DisplayName = "ComfyUI-LNL"
Icon = ""
